--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-upload": "^23.0.0",
         "moment": "^2.28.0",
         "sweetalert2": "^9.17.2"
     }
