--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-upload": "^23.0.0",
+        "datatables.net-buttons": "^1.6.5",
+        "datatables.net-buttons-dt": "^1.6.5",
         "moment": "^2.28.0",
         "sweetalert2": "^9.17.2"
     }
