--- a/.env.example
+++ b/.env.example
@@ -45,14 +45,14 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-API_AUTH_AD_PROD_LINK=https://api.embraconnet.com.br/
-API_AUTH_AD_PROD_CLIENT_ID=3272cea5-9888-3745-9a52-c1b9de7cf699
-API_AUTH_AD_PROD_SECRET=7bfd7faf-77e7-30a2-a3ba-1859de2e8a3e
+API_AUTH_AD_PROD_LINK=
+API_AUTH_AD_PROD_CLIENT_ID=
+API_AUTH_AD_PROD_SECRET=
 
-API_AUTH_AD_HOM_LINK=https://api-hom-embraconnet.com.br/
-API_AUTH_AD_HOM_CLIENT_ID=ea8b613c-b02b-391f-86b7-013d3fd8ef7c 
-API_AUTH_AD_HOM_SECRET=baa028fd-4f04-35d3-90cd-a9525ff0b83a
+API_AUTH_AD_HOM_LINK=
+API_AUTH_AD_HOM_CLIENT_ID=
+API_AUTH_AD_HOM_SECRET=
 
-API_AUTH_AD_DEV_LINK=https://api-des.embraconnet.com.br/
-API_AUTH_AD_DEV_CLIENT_ID=3d91bdcd-401d-3027-851e-6d536304b5b9
-API_AUTH_AD_DEV_SECRET=53aee07a-1033-3be5-b346-2fefdf88b3ab
+API_AUTH_AD_DEV_LINK=
+API_AUTH_AD_DEV_CLIENT_ID=
+API_AUTH_AD_DEV_SECRET=
